# LaboraX

./: .gitguardian.yaml  .gitignore  .lintstagedrc.json  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  README.md  commitlint.config.js  docker-compose.override.yml.example  docker-compose.yml  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  commitlint.yml  deploy.yml
.husky/: pre-push
backend/: .dockerignore  .env.example  Dockerfile  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt  server.py
backend/alembic/: env.py
backend/alembic/versions/: 1fbc1d4e1ed0_create_test_catalog_test_orders_and_.py  4f931cec4aae_create_diseases_and_cases_tables.py  739c748e925d_create_interpretation_results_table.py  863f57021fa6_create_users_table.py  a1c3f6b2d9e4_create_student_topic_mastery_table.py  b7d4e2f918a3_create_case_assignments_table.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: auth.py  cases.py  diseases.py  interpretations.py  lecturer.py  results.py  scoring.py  tests.py
backend/app/core/: config.py  deps.py  logging.py  security.py
backend/app/db/: base.py  seed.py  session.py
backend/app/db/models/: __init__.py  case.py  case_assignment.py  disease.py  interpretation_result.py  result.py  student_topic_mastery.py  test_catalog.py  test_order.py  user.py
backend/app/ml/data/: chemistry_diseases.json  hematology_diseases.json  test_catalog.json
backend/app/schemas/: auth.py  case.py  disease.py  interpretation.py  lecturer.py  result.py  scoring.py  test_catalog.py  test_order.py  user.py
backend/app/services/answer_evaluator/: evaluator.py  preprocessing.py
backend/app/services/case_generator/: generator.py  seed_data.py
backend/app/services/mastery/: __init__.py  tracker.py
backend/app/services/result_generator/: generator.py  reference_ranges.py
backend/app/services/test_ordering/: catalog_seed_data.py  relevance.py
backend/app/services/tutor/: __init__.py  explanations.py
backend/tests/: conftest.py
backend/tests/integration/: test_app_boots.py  test_auth_routes.py  test_cases_routes.py  test_diseases_routes.py  test_interpretations_routes.py  test_lecturer_routes.py  test_scoring_routes.py  test_tests_and_results_routes.py
backend/tests/unit/: test_answer_evaluator.py  test_case_generator.py  test_catalog_seed_data.py  test_config.py  test_health.py  test_mastery_tracker.py  test_preprocessing.py  test_relevance.py  test_result_generator.py  test_security.py  test_seed_data.py  test_tutor_explanations.py
docs/: FOLDER_STRUCTURE.md  HLD.md  LLD.md  PRD.md  SPRINT_PLAN.md
frontend/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx
frontend/src/api/: authApi.ts  casesApi.ts  client.ts  diseasesApi.ts  interpretationsApi.ts  lecturerApi.ts  scoringApi.ts  testsApi.ts  tokenStorage.ts
frontend/src/app/: providers.tsx
frontend/src/components/: ProtectedRoute.test.tsx  ProtectedRoute.tsx
frontend/src/features/auth/: LoginPage.test.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/features/clinicalChemistry/: CaseIntakePage.test.tsx  CaseIntakePage.tsx  InterpretationPage.test.tsx  InterpretationPage.tsx  TestOrderingPage.test.tsx  TestOrderingPage.tsx  useNextCase.ts  useOrderTests.ts  useTestCatalog.ts
frontend/src/features/dashboard/: DashboardPage.tsx
frontend/src/features/hematology/: CaseIntakePage.test.tsx  CaseIntakePage.tsx  InterpretationPage.test.tsx  InterpretationPage.tsx  TestOrderingPage.test.tsx  TestOrderingPage.tsx  useCaseResults.ts  useInterpretationHistory.ts  useNextCase.ts  useSubmitInterpretation.ts
frontend/src/features/lecturerDashboard/: LecturerDashboardPage.test.tsx  LecturerDashboardPage.tsx  useDiseases.ts  useLecturerDashboard.ts
frontend/src/features/scoring/: ScoringPage.test.tsx  ScoringPage.tsx  useScoringSummary.ts
frontend/src/hooks/: useAppStore.ts
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en.json  fr.json  rw.json
frontend/src/store/: authSlice.test.ts  authSlice.ts
frontend/src/test-utils/: fixtures.ts
frontend/src/theme/: theme.ts
infra/: fly.toml  render.yaml
scripts/: load_smoke_test.py  pyproject.toml
