[project]
name = "laborax-backend"
version = "0.1.0"
description = "LaboraX - AI Practical Laboratory Simulator (FastAPI backend)"
requires-python = ">=3.11,<3.13"
readme = "../README.md"
license = { text = "Proprietary" }
authors = [{ name = "Enoch (EnochLabs)" }]

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "asyncpg>=0.29,<1.0",
    "redis>=5.0,<6.0",
    "arq>=0.26,<1.0",
    "passlib[argon2]>=1.7,<2.0",
    "pyjwt>=2.8,<3.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.5,<2.0",
    "xgboost>=2.1,<3.0",
    "sentence-transformers>=3.0,<4.0",
    "spacy>=3.7,<4.0",
]
dev = [
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
    "pre-commit>=3.7,<4.0",
    "types-passlib",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ---------------------------------------------------------------------------
# Ruff (lint + format) - replaces flake8/isort/black
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle / pyflakes
    "I",                 # isort
    "UP",                # pyupgrade
    "B",                  # bugbear
    "C4",                  # comprehensions
    "SIM",                  # simplify
    "ASYNC",                 # async lint rules
    "RUF",                     # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions", "tests"]

[[tool.mypy.overrides]]
module = ["arq.*", "passlib.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=app --cov-report=term-missing --cov-report=xml --cov-fail-under=70"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = ["app/ml/training/*", "*/__init__.py"]
